--- a/src/gex-login.html
+++ b/src/gex-login.html
@@ -46,7 +46,7 @@
       paper-button#login {
         margin-top: 32px;
         background: var(--accent-color);
-        color: var(--primary-text-color);
+        color: var(--secondary-text-color);
         display: flex;
         flex-direction: row;
       }
